--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.0.0",
     "antd": "^5.23.2",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.1.0",
+    "firebase-functions": "^6.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
